# crafting-interpreters

./: .gitignore  LICENSE  README.md  TODO.md  Taskfile.yml  crafting-interpreters.cabal  crafting-interpreters.code-workspace
alox/: README.md  Taskfile.yml  alire.toml  alox.gpr
alox/src/: alox.adb  chunk.adb  chunk.ads  debug.adb  debug.ads  exceptions.ads  lox_chunk.adb  lox_chunk.ads  lox_compiler.adb  lox_compiler.ads  lox_object.adb  lox_object.ads  lox_scanner.adb  lox_scanner.ads  lox_table.adb  lox_table.ads  lox_types.ads  lox_value.adb  lox_value.ads  lox_vm.adb  lox_vm.ads  main.adb  main.ads  value.adb  value.ads
alox/tests/: alire.toml
alox/tests/src/: alox_suite.adb  alox_suite.ads  chunk_tests.adb  chunk_tests.ads  tests.adb  value_tests.adb  value_tests.ads
app/: Main.hs
assets/: count.lox  fib.lox  fib3.lox  return.lox
clox/: CMakeLists.txt  CMakePresets.json
clox/src/: chunk.c  chunk.h  chunk.spec.cc  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  object.spec.cc  scanner.c  scanner.h  table.c  table.h  table.spec.cc  value.c  value.h  value.spec.cc  vm.c  vm.h  vm.spec.cc
cxxlox/: CMakeLists.txt  CMakePresets.json
cxxlox/src/: chunk.cc  chunk.h  compiler.cc  compiler.h  debug.cc  debug.h  garbage_collector.cc  garbage_collector.h  gc.spec.cc  main.cc  object.cc  object.h  object_fwd.h  scanner.cc  scanner.h  value.cc  value.h  vm.cc  vm.h  vm.spec.cc
hlox/src/: Lox.hs
hlox/src/Parser/: Expr.hs  Parser.hs  Stmt.hs
hlox/src/Resolver/: Resolver.hs
hlox/src/Runtime/: Environment.hs  Instance.hs  Native.hs
hlox/src/Scanner/: Scanner.hs
hlox/test/: ScannerSpec.hs
src/: Environment.hs  Error.hs  Expr.hs  HLox.hs  Interpreter.hs  Literal.hs  Lox.hs  Native.hs  Parser.hs  Runtime.hs  Scanner.hs  Stmt.hs  Token.hs
src/Parser/: Expr.hs  Literal.hs  Parser.hs  Stmt.hs
src/Resolver/: Resolver.hs
src/Runtime/: Environment.hs  Instance.hs  Interpreter.hs  Types.hs
src/Scanner/: Scanner.hs  Token.hs
tests/switch/: errors.lox  match_any.lox  match_number.lox  syntax.lox
