cabal-version:      3.0

name:               crafting-interpreters
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Raphael Meyer
category:           Development
build-type:         Simple

common warnings
    ghc-options: -Wall -Werror

library
    import:
        warnings

    exposed-modules:
        HLox,
        Lox,
        Parser.Expr,
        Parser.Literal,
        Parser.Parser,
        Parser.Stmt,
        Resolver.Resolver,
        Runtime.Environment,
        Runtime.Interpreter,
        Runtime.Native,
        Runtime.Types,
        Scanner.Scanner,
        Scanner.Token

    build-depends:
        base == 4.18.3.0,
        containers,
        mtl,
        text,
        time

    hs-source-dirs: src

    default-language: Haskell2010

executable hlox
    import:
        warnings

    main-is: Main.hs

    build-depends:
        base,
        text,
        crafting-interpreters

    hs-source-dirs: app

    default-language: Haskell2010

test-suite crafting-interpreters-test
    import:           warnings

    default-language: Haskell2010

    other-modules:
        ScannerSpec

    type: exitcode-stdio-1.0

    hs-source-dirs: test

    main-is: Spec.hs

    build-depends:
        base,
        extra,
        hspec,
        crafting-interpreters

    build-tool-depends:
        hspec-discover:hspec-discover
